--- a/currency-conversion-services/pom.xml
+++ b/currency-conversion-services/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.7.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.kpi.microservice.currencyexchangeexampleservice</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.javapoint.microservices</groupId>
+	<artifactId>currency-conversion-services</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot with microservices</description>
+	<name>currency-conversion-services</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>2021.0.4</spring-cloud.version>
@@ -22,6 +22,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<dependency>  
+<groupId>org.springframework.cloud</groupId>    
+<artifactId>spring-cloud-starter-feign</artifactId>  
+<version>1.4.4.RELEASE</version>  
+</dependency>  
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -34,11 +39,6 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
-		<dependency>  
-          <groupId>org.springframework.cloud</groupId>    
-              <artifactId>spring-cloud-starter-feign</artifactId>  
-          <version>1.4.4.RELEASE</version>  
-      </dependency>  
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -47,14 +47,18 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
